kubernetes/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-canary
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: whoami
    tier: canary
