kubernetes/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-nodejs-express-svc
spec:
  selector:
    app: whoami-nodejs-express  # Matches the label in the deployment
  ports:
    - protocol: TCP
      port: 80              # External port to expose the service
      targetPort: 8080      # Port inside the container where the app listens
  type: ClusterIP            # You can change this to NodePort or LoadBalancer depending on your needs
  sessionAffinity: None
